# SchoolProjects

./: .gitignore
APPS/cv3/: cuda3_unm.cu  main3_unm.cpp  uni_mem_allocator.cpp
APPS/cv4/: .cproject  .project  cuda4_unm.cu  main4_unm.cpp  uni_mem_allocator.cpp
Alg2/: Prj-1-4.rar
Alg2/Prj-1-4/: Alg2-1-4.pptx  CMakeLists.txt  List.cpp  List.h  ProjectListAdds.h  ProjectListImpl.cpp  main.cpp
PJ1/cv11/: outputFile
Prg2/2_Invoice/: CMakeLists.txt  Invoice.cpp  Invoice.h  InvoiceItem.cpp  InvoiceItem.h  main.cpp
Prg2/3_Bank/: Account.cpp  CMakeLists.txt  Client.cpp
Prg2/4_BankII/: Account.cpp  Account.h  Bank.h  Client.h  main.cpp
Prg2/5_BankIII/: Account.cpp  Account.h  CMakeLists.txt  Client.h  main.cpp
Prg2/6_BankIV/: Account.h  Bank.cpp  CMakeLists.txt  CreditAccount.h  PartnerAccount.h  main.cpp
Prg2/7_BankV/: Account.cpp  Account.h  Bank.h  Client.cpp  CreditAccount.cpp  CreditAccount.h  PartnerAccount.cpp
Prg2/Bank/: Account.cpp  Account.h  Bank.cpp  Bank.h  CMakeLists.txt  Transaction.cpp  Transaction.h  TransactionData.cpp  TransactionData.h  TransactionService.cpp  TransactionService.h  main.cpp
Prg2/Invoice/: Person.cpp  Person.h
Prg2/KeyValue/: KeyValue.cpp  KeyValue.h  Main.cpp
SPJA/: tasks.py
SPJA/cv2/: init.py  tasks.py  tests.py
SPJA/cv3/: cheatsheet.py  tasks.py  test.txt  tests.py  to.txt
SPJA/cv4/: cheatsheet.py  tasks.py
SPJA/cv5/: Beam.py  Enemy.py  Enemy1.py  Enemy2.py  Enemy3.py  Enemy4.py  Enemy5.py  Explosion.py  GameObject.py  Missile.py  Player.py  (+4 more)
UDBS/: UDBS_Project.docx  UDBS_Project.pptx  db.dmd  excel.xlsx
(+144 files in other folders)
